src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    EQ
    GT
    LBRACE
    LT
    RBRACE

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> ASSIGN ID EQUALS expression SEMI
Rule 4     statement -> PRINT LPAREN expression RPAREN SEMI
Rule 5     expression -> expression ADD expression
Rule 6     expression -> expression SUB expression
Rule 7     expression -> expression MUL expression
Rule 8     expression -> expression DIV expression
Rule 9     expression -> LPAREN expression RPAREN
Rule 10    expression -> NUMBER
Rule 11    expression -> STRING
Rule 12    expression -> ID

Terminals, with rules where they appear

ADD                  : 5
ASSIGN               : 3
COMMA                : 
DIV                  : 8
EQ                   : 
EQUALS               : 3
GT                   : 
ID                   : 3 12
LBRACE               : 
LPAREN               : 4 9
LT                   : 
MUL                  : 7
NUMBER               : 10
PRINT                : 4
RBRACE               : 
RPAREN               : 4 9
SEMI                 : 3 4
STRING               : 11
SUB                  : 6
error                : 

Nonterminals, with rules where they appear

expression           : 3 4 5 5 6 6 7 7 8 8 9
program              : 1 0
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . ASSIGN ID EQUALS expression SEMI
    (4) statement -> . PRINT LPAREN expression RPAREN SEMI

    ASSIGN          shift and go to state 3
    PRINT           shift and go to state 4

    program                        shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . ASSIGN ID EQUALS expression SEMI
    (4) statement -> . PRINT LPAREN expression RPAREN SEMI

    ASSIGN          shift and go to state 3
    PRINT           shift and go to state 4

    statement                      shift and go to state 5

state 2

    (2) program -> statement .

    ASSIGN          reduce using rule 2 (program -> statement .)
    PRINT           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> ASSIGN . ID EQUALS expression SEMI

    ID              shift and go to state 6


state 4

    (4) statement -> PRINT . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 7


state 5

    (1) program -> program statement .

    ASSIGN          reduce using rule 1 (program -> program statement .)
    PRINT           reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 6

    (3) statement -> ASSIGN ID . EQUALS expression SEMI

    EQUALS          shift and go to state 8


state 7

    (4) statement -> PRINT LPAREN . expression RPAREN SEMI
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . STRING
    (12) expression -> . ID

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 13

    expression                     shift and go to state 10

state 8

    (3) statement -> ASSIGN ID EQUALS . expression SEMI
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . STRING
    (12) expression -> . ID

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 13

    expression                     shift and go to state 14

state 9

    (9) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . STRING
    (12) expression -> . ID

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 13

    expression                     shift and go to state 15

state 10

    (4) statement -> PRINT LPAREN expression . RPAREN SEMI
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression

    RPAREN          shift and go to state 16
    ADD             shift and go to state 17
    SUB             shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20


state 11

    (10) expression -> NUMBER .

    RPAREN          reduce using rule 10 (expression -> NUMBER .)
    ADD             reduce using rule 10 (expression -> NUMBER .)
    SUB             reduce using rule 10 (expression -> NUMBER .)
    MUL             reduce using rule 10 (expression -> NUMBER .)
    DIV             reduce using rule 10 (expression -> NUMBER .)
    SEMI            reduce using rule 10 (expression -> NUMBER .)


state 12

    (11) expression -> STRING .

    RPAREN          reduce using rule 11 (expression -> STRING .)
    ADD             reduce using rule 11 (expression -> STRING .)
    SUB             reduce using rule 11 (expression -> STRING .)
    MUL             reduce using rule 11 (expression -> STRING .)
    DIV             reduce using rule 11 (expression -> STRING .)
    SEMI            reduce using rule 11 (expression -> STRING .)


state 13

    (12) expression -> ID .

    RPAREN          reduce using rule 12 (expression -> ID .)
    ADD             reduce using rule 12 (expression -> ID .)
    SUB             reduce using rule 12 (expression -> ID .)
    MUL             reduce using rule 12 (expression -> ID .)
    DIV             reduce using rule 12 (expression -> ID .)
    SEMI            reduce using rule 12 (expression -> ID .)


state 14

    (3) statement -> ASSIGN ID EQUALS expression . SEMI
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression

    SEMI            shift and go to state 21
    ADD             shift and go to state 17
    SUB             shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20


state 15

    (9) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression

    RPAREN          shift and go to state 22
    ADD             shift and go to state 17
    SUB             shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20


state 16

    (4) statement -> PRINT LPAREN expression RPAREN . SEMI

    SEMI            shift and go to state 23


state 17

    (5) expression -> expression ADD . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . STRING
    (12) expression -> . ID

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 13

    expression                     shift and go to state 24

state 18

    (6) expression -> expression SUB . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . STRING
    (12) expression -> . ID

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 13

    expression                     shift and go to state 25

state 19

    (7) expression -> expression MUL . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . STRING
    (12) expression -> . ID

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 13

    expression                     shift and go to state 26

state 20

    (8) expression -> expression DIV . expression
    (5) expression -> . expression ADD expression
    (6) expression -> . expression SUB expression
    (7) expression -> . expression MUL expression
    (8) expression -> . expression DIV expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . STRING
    (12) expression -> . ID

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 13

    expression                     shift and go to state 27

state 21

    (3) statement -> ASSIGN ID EQUALS expression SEMI .

    ASSIGN          reduce using rule 3 (statement -> ASSIGN ID EQUALS expression SEMI .)
    PRINT           reduce using rule 3 (statement -> ASSIGN ID EQUALS expression SEMI .)
    $end            reduce using rule 3 (statement -> ASSIGN ID EQUALS expression SEMI .)


state 22

    (9) expression -> LPAREN expression RPAREN .

    RPAREN          reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    ADD             reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    SUB             reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    MUL             reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    DIV             reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    SEMI            reduce using rule 9 (expression -> LPAREN expression RPAREN .)


state 23

    (4) statement -> PRINT LPAREN expression RPAREN SEMI .

    ASSIGN          reduce using rule 4 (statement -> PRINT LPAREN expression RPAREN SEMI .)
    PRINT           reduce using rule 4 (statement -> PRINT LPAREN expression RPAREN SEMI .)
    $end            reduce using rule 4 (statement -> PRINT LPAREN expression RPAREN SEMI .)


state 24

    (5) expression -> expression ADD expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression

  ! shift/reduce conflict for ADD resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    RPAREN          reduce using rule 5 (expression -> expression ADD expression .)
    SEMI            reduce using rule 5 (expression -> expression ADD expression .)
    ADD             shift and go to state 17
    SUB             shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20

  ! ADD             [ reduce using rule 5 (expression -> expression ADD expression .) ]
  ! SUB             [ reduce using rule 5 (expression -> expression ADD expression .) ]
  ! MUL             [ reduce using rule 5 (expression -> expression ADD expression .) ]
  ! DIV             [ reduce using rule 5 (expression -> expression ADD expression .) ]


state 25

    (6) expression -> expression SUB expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression

  ! shift/reduce conflict for ADD resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    RPAREN          reduce using rule 6 (expression -> expression SUB expression .)
    SEMI            reduce using rule 6 (expression -> expression SUB expression .)
    ADD             shift and go to state 17
    SUB             shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20

  ! ADD             [ reduce using rule 6 (expression -> expression SUB expression .) ]
  ! SUB             [ reduce using rule 6 (expression -> expression SUB expression .) ]
  ! MUL             [ reduce using rule 6 (expression -> expression SUB expression .) ]
  ! DIV             [ reduce using rule 6 (expression -> expression SUB expression .) ]


state 26

    (7) expression -> expression MUL expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression

  ! shift/reduce conflict for ADD resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    RPAREN          reduce using rule 7 (expression -> expression MUL expression .)
    SEMI            reduce using rule 7 (expression -> expression MUL expression .)
    ADD             shift and go to state 17
    SUB             shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20

  ! ADD             [ reduce using rule 7 (expression -> expression MUL expression .) ]
  ! SUB             [ reduce using rule 7 (expression -> expression MUL expression .) ]
  ! MUL             [ reduce using rule 7 (expression -> expression MUL expression .) ]
  ! DIV             [ reduce using rule 7 (expression -> expression MUL expression .) ]


state 27

    (8) expression -> expression DIV expression .
    (5) expression -> expression . ADD expression
    (6) expression -> expression . SUB expression
    (7) expression -> expression . MUL expression
    (8) expression -> expression . DIV expression

  ! shift/reduce conflict for ADD resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    RPAREN          reduce using rule 8 (expression -> expression DIV expression .)
    SEMI            reduce using rule 8 (expression -> expression DIV expression .)
    ADD             shift and go to state 17
    SUB             shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20

  ! ADD             [ reduce using rule 8 (expression -> expression DIV expression .) ]
  ! SUB             [ reduce using rule 8 (expression -> expression DIV expression .) ]
  ! MUL             [ reduce using rule 8 (expression -> expression DIV expression .) ]
  ! DIV             [ reduce using rule 8 (expression -> expression DIV expression .) ]

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for ADD in state 24 resolved as shift
WARNING: shift/reduce conflict for SUB in state 24 resolved as shift
WARNING: shift/reduce conflict for MUL in state 24 resolved as shift
WARNING: shift/reduce conflict for DIV in state 24 resolved as shift
WARNING: shift/reduce conflict for ADD in state 25 resolved as shift
WARNING: shift/reduce conflict for SUB in state 25 resolved as shift
WARNING: shift/reduce conflict for MUL in state 25 resolved as shift
WARNING: shift/reduce conflict for DIV in state 25 resolved as shift
WARNING: shift/reduce conflict for ADD in state 26 resolved as shift
WARNING: shift/reduce conflict for SUB in state 26 resolved as shift
WARNING: shift/reduce conflict for MUL in state 26 resolved as shift
WARNING: shift/reduce conflict for DIV in state 26 resolved as shift
WARNING: shift/reduce conflict for ADD in state 27 resolved as shift
WARNING: shift/reduce conflict for SUB in state 27 resolved as shift
WARNING: shift/reduce conflict for MUL in state 27 resolved as shift
WARNING: shift/reduce conflict for DIV in state 27 resolved as shift
